 * The merge process now preserves non-standard content from the existing level.dat file, such as for instance block ID mappings stored there by mods.
 * Bug fix: don't change floating red sand to chiseled sandstone

-- Version 1.11.2, released 28-6-2015

 * Bug fix: make the File -> Open World screen work again on Macs

-- Version 1.11.1, released 26-4-2015

 * You can now choose Lava for the "except on" or "only on" option in the brush filter settings
 * The Merge process now leaves the "inhabited time" of each chunk intact so that regional difficulty is not affected
 * Slightly better Mac integration, still a work in progress
 * Bug fix: you can once again create new layered custom materials without getting an error message

-- Version 1.11.0, released 25-4-2015

 * Maps can now have ceilings! The ceilings are separate dimensions which you can customise as desired and which will be rendered upside down over the surface, allowing you to create covered/dark/cavernous maps with full control over the floor (and the ceiling)
   + Add a ceiling with the Edit -> Add Ceiling to Surface..., Add Ceiling to Nether... and Add Ceiling to End... options
   + Once added, the corresponding "Remove ..." menu items become active, allowing you to remove them again. Removing the Nether or End will also remove its ceiling, if any; you can't have a ceiling without a surface
   + You can quickly switch to and from the ceiling of the current dimension by pressing Ctrl+C or ⌘+C
   + Wherever the ceiling intersects the surface a black crosshatch pattern will be drawn to make it clear where the two dimensions meet and the map will be solid. Wherever the two intersect the solid blocks from the surface dimension will take precedence