@@ -11,15 +11,16 @@ package org.pepsoft.minecraft;
  */
 public interface ChunkFactory {
     /**
-     * Create the chunk at the specified location. No lighting has to be
-     * performed.
+     * Create the chunk at the specified location, if present. No lighting need
+     * be performed.
      *
      * @param x The X coordinate in the Minecraft coordinate space of the chunk
      *     to generate.
      * @param z The Z coordinate in the Minecraft coordinate space of the chunk
      *     to generate.
      * @return The generated chunk, in a data structure along with some
-     *     statistics about it.
+     *     statistics about it, or <code>null</code> if no chunk is present at
+     *     the specified coordinates.
      */
     ChunkCreationResult createChunk(int x, int z);
     
