@@ -32,6 +32,7 @@
    + This is great for creating, for instance, smooth cobblestone or stone slab roads (easily made with the new Pencil tool) which you can walk without having to jump
    + The requirements are the same as for Smooth Snow: the world must either be hand crafted, or created from a high resolution (16-bit) height map. Worlds created from 8-bit height maps won't have the extra precision needed, although you can create it by using the Smooth tool along the path of the area where you want to apply this feature
  * The merge process now preserves non-standard content from the existing level.dat file, such as for instance block ID mappings stored there by mods.
+ * When importing existing Minecraft maps the chunks that have to be added around the edges to make up whole tiles are handled a little more elegantly: instead of being marked "read only" they are marked "not present" and are not displayed in the editor and are not Exported or Merged. The "Not Present" layer is a normal layer like the "Read Only" layer which you can remove in the normal way if you want the chunk to be present.
  * Bug fix: don't change floating red sand to chiseled sandstone
 
 -- Version 1.11.2, released 28-6-2015
